# packages/taskManager-app/server/api/controllers/examples/router.ts
@@ -6,7 +6,9 @@ export default express.Router()
     .post('/participant/register', controller.participant_register)
     .post('/participant/changeIdentity', controller.participant_changeIdentity)
 
-    .get('/task/tasks/:id', controller.task_getParticipantsTasks)
+    .get('/task/tasks/:id', controller.task_get)
+    .get('/task/tasks/owned/:id', controller.task_getOwned)
+    .get('/task/tasks/assigned:id', controller.task_getAssignedTo)
     .post('/task/create', controller.task_create)
     .post('/task/modify', controller.task_modify)
     .post('/task/assign', controller.task_assign)
